Code improvements overall